--- a/examples/detatched.html
+++ b/examples/detatched.html
@@ -7,9 +7,9 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-<!-- <link rel="stylesheet" href="../assets/css/backbone.ui.header.css" type="text/css" media="screen"> -->
-<link type="text/css" href="../assets/less/backbone.ui.header.less" media="screen" rel="stylesheet/less">
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/less.js/1.3.3/less.min.js"></script>
+<link rel="stylesheet" href="../assets/css/backbone.ui.header.css" type="text/css" media="screen">
+<!-- link type="text/css" href="../assets/less/backbone.ui.header.less" media="screen" rel="stylesheet/less" -->
+<!-- script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/less.js/1.3.3/less.min.js"></script -->
 <style>
 * {
 	padding: 0;
@@ -24,6 +24,7 @@ html, body {
 header {
 	/* background-color: rgba(255,255,255,.5); */
 	background-color: transparent;
+	background: #fff;
 	color: #299bc9;
 	height: 60px;
 }
